# Cnx

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  Allocators_8h.html  ArgLists_8h.html  ArrayDecl_8h.html  ArrayDef_8h.html  ArrayImpl_8h.html  Array_8h.html  Assert_8h.html  AtomicImpl_8h.html  Atomic_8h.html  BasicTypes_8h.html  C2nxt.code-workspace  C2nxt_8h.html  CMakeLists.txt  Clock_8h.html  Cnx_8h.html  Condvar_8h.html  Def_8h.html  Doxyfile-mcss.in  Doxyfile.in  Duration_8h.html  Enum_8h.html  Error_8h.html  FileSystem_8h.html  File_8h.html  Format_8h.html  IO_8h.html  IfLet_8h.html  Iterator_8h.html  LICENSE  Lambda_8h.html  Math_8h.html  Mutex_8h.html  OptionDecl_8h.html  OptionDef_8h.html  OptionImpl_8h.html  (+263 more)
.github/workflows/: UpdateDocs.yml  cmake.yml
benchmark/: C2nxt-Benchmark.code-workspace  CMakeLists.txt  Results.ods  benchmark.sh  clean.sh  mac-clang.cmake
benchmark/src/: benchmark.c
cmake/: FindCriterion.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile-mcss  Doxyfile-mcss.in  Doxyfile.in  conf.py
docs/doxygen/html/: C2nxt_8h.html  StdAllocators_8h.html  StdArray_8h.html  StdAssert_8h.html  StdBasicTypes_8h.html  StdCollectionsData_8h.html  StdDef_8h.html  StdError_8h.html  StdFormat_8h.html  StdIfLet_8h.html  StdIterator_8h.html  StdMath_8h.html  StdOption_8h.html  StdPlatform_8h.html  StdRange_8h.html  StdRatio_8h.html  StdResult_8h.html  StdString_8h.html  StdTrait_8h.html  StdTypeTraits_8h.html  StdVector_8h.html  ____StdStaticBase_8h.html  ____StdStaticCheckedAdd_8h.html  ____StdStaticCheckedMul_8h.html  ____StdStaticCheckedSub_8h.html  ____StdStaticGCD_8h.html  annotated.html  group__collections.html  group__format.html  group__iterators.html  group__math.html  group__memory.html  group__monadics.html  group__ranges.html  group__std__array.html  group__std__def.html  group__std__option.html  group__std__platform.html  group__std__ratio.html  group__std__result.html  (+11 more)
docs/html/: ArgLists_8h.html  StdAllocators_8h.html  StdArgLists_8h.html  StdArrayDecl_8h.html  StdArrayDef_8h.html  StdArrayImpl_8h.html  StdArray_8h.html  StdAssert_8h.html  StdAtomic_8h.html  StdBasicTypes_8h.html  StdClock_8h.html  StdCollectionsData_8h.html  StdDef_8h.html  StdDuration_8h.html  StdEnum_8h.html  StdError_8h.html  StdFormat_8h.html  StdIO_8h.html  StdIfLet_8h.html  StdIterator_8h.html  StdLambda_8h.html  StdMath_8h.html  StdOptionDecl_8h.html  StdOptionDef_8h.html  StdOptionImpl_8h.html  StdOption_8h.html  StdPPBool_8h.html  StdPPMath_8h.html  StdPPStrings_8h.html  StdPPTuple_8h.html  StdPlatform_8h.html  StdRangeDecl_8h.html  StdRangeDef_8h.html  StdRangeImpl_8h.html  StdRange_8h.html  StdRatio_8h.html  StdResultDef_8h.html  StdResultImpl_8h.html  StdResult_8h.html  StdString_8h.html  (+77 more)
include/C2nxt/: C2nxt.h  StdAllocators.h  StdArray.h  StdAssert.h  StdAtomic.h  StdBasicTypes.h  StdCollectionData.h  StdCollectionsData.h  StdDef.h  StdEnum.h  StdError.h  StdFormat.h  StdIO.h  StdIterator.h  StdLambda.h  StdMath.h  StdOption.h  StdPlatform.h  StdRange.h  StdRatio.h  StdResult.h  StdString.h  StdStringExt.h  StdThread.h  StdTime.h  StdTrait.h  StdTuple.h  StdTypeTraits.h  StdUniquePtr.h  StdVector.h
include/C2nxt/__std_thread/: __std_thread.h
include/C2nxt/filesystem/: StdPath.h
include/C2nxt/math/: __StdStaticBase.h  __StdStaticCheckedAdd.h  __StdStaticCheckedDiv.h  __StdStaticCheckedMul.h  __StdStaticCheckedSub.h  __StdStaticGCD.h
include/C2nxt/monadic/: StdIfLet.h
include/C2nxt/mpl/: StdArgLists.h  StdPPBool.h  StdPPMath.h  StdPPStrings.h  StdPPTuple.h
include/C2nxt/std_array/: StdArrayDecl.h  StdArrayDef.h  StdArrayImpl.h
include/C2nxt/std_atomic/: StdAtomicImpl.h
include/C2nxt/std_collections_data/: StdCollectionDataDecl.h  StdCollectionDataDef.h
include/C2nxt/std_option/: StdOptionDecl.h  StdOptionDef.h  StdOptionImpl.h
include/C2nxt/std_range/: StdRangeDecl.h  StdRangeDef.h  StdRangeImpl.h
include/C2nxt/std_result/: StdResultDecl.h  StdResultDef.h  StdResultImpl.h
include/C2nxt/std_smart_ptrs/: StdSmartPtrDef.h
include/C2nxt/std_unique_ptr/: StdUniquePtrDecl.h  StdUniquePtrDef.h  StdUniquePtrImpl.h
include/C2nxt/std_vector/: StdVectorDecl.h  StdVectorDef.h  StdVectorImpl.h
include/C2nxt/time/: StdClock.h  StdDuration.h  StdTimePoint.h
include/Cnx/: Allocators.h  Array.h  Assert.h  Atomic.h  BasicTypes.h  Cnx.h  CollectionData.h  Def.h  Enum.h  Error.h  FileSystem.h  Format.h  IO.h  Iterator.h  Lambda.h  Math.h  Option.h  Platform.h  Range.h  Ratio.h  Result.h  SharedPtr.h  String.h  StringExt.h  Sync.h  Thread.h  Time.h  Trait.h  Tuple.h  TypeTraits.h  UniquePtr.h  Vector.h
include/Cnx/__thread/: __thread.h
include/Cnx/array/: ArrayDecl.h  ArrayDef.h  ArrayImpl.h
include/Cnx/atomic/: AtomicImpl.h
include/Cnx/collections_data/: CollectionDataDecl.h  (+1 more)
src/: Allocators.c  Assert.c  AtomicImpl.c  Error.c  Format.c  IO.c  Math.c  Option.c  Range.c  Ratio.c  Result.c  StdAllocators.c  StdAssert.c  StdAtomicImpl.c  StdError.c  StdFormat.c  StdIO.c  StdMath.c  StdOption.c  StdRange.c  StdRatio.c  StdResult.c  StdString.c  StdStringExt.c  StdThread.c  StdVector.c  String.c  StringExt.c  Thread.c  Vector.c
src/benchmark/: Results.pmdx  Results_new_file_api.pmdx  benchmark.c  fileio_benchmark.c  println_benchmark.c
src/filesystem/: File.c  Path.c  StdPath.c
src/sync/: Condvar.c  Mutex.c  SharedLock.c  SharedMutex.c  UniqueLock.c
src/test/: ArrayTest.h  Arrayi32_10.c  Arrayi32_10.h  CheckedMathTest.h  ClockTest.h  Criterion.h  DurationTest.h  GcdAndLcmTest.h  LambdaTest.h  PathTest.h  RangeTest.h  RatioTest.h  SharedPtrTest.h  StdArrayi32_10.c  StdArrayi32_10.h  StringTest.h  Test.c  ThreadTest.h  TimePointTest.h  UniquePtrTest.h  VectorTest.h
src/time/: Clock.c  Duration.c  StdClock.c  StdDuration.c  StdTimePoint.c  TimePoint.c
templates/: entry-func.html
test/: .clang-format  .clang-tidy  .gitignore  C2nxt-Test.code-workspace  CMakeLists.txt  linux-gcc.cmake  test.sh  windows-clang.cmake
test/src/: ArrayTest.h  CheckedMathTest.h  RatioTest.h  StdArrayi32_10.h  StringTest.h  Test.c  VectorTest.h
(+44 files in other folders)
