find_package(Doxygen REQUIRED)

set(MCSS_DOXYFILE_IN "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile-mcss.in")
set(MCSS_DOXYFILE_OUT "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile-mcss")
set(MCSS_CONF_PY "${CMAKE_CURRENT_SOURCE_DIR}/conf.py")
set(MCSS_TEMPLATES "${CMAKE_CURRENT_SOURCE_DIR}/templates")
set(DOXYGEN_INPUT_DIR "${PROJECT_SOURCE_DIR}/include/C2nxt")
set(DOXYGEN_OUTPUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/doxygen")
set(DOXYGEN_INDEX_FILE "${DOXYGEN_OUTPUT_DIR}/xml/index.xml")
set(DOXYFILE_IN "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in")
set(DOXYFILE_OUT "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile")

set(DOXYGEN_HTML "${DOXYGEN_OUTPUT_DIR}/html/index.html")

set(COMPILATION_DATABASE_DIR "${PROJECT_SOURCE_DIR}")

configure_file(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)
configure_file(${MCSS_DOXYFILE_IN} ${MCSS_DOXYFILE_OUT} @ONLY)

file(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIR})

add_custom_command(OUTPUT ${DOXYGEN_HTML}
	DEPENDS ${EXPORTS} ${PROJECT_SOURCE_DIR}/README.md
	COMMAND python3 ${PROJECT_SOURCE_DIR}/third-party/m.css/documentation/doxygen.py ${MCSS_CONF_PY} --debug --templates ${MCSS_TEMPLATES}
	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
	MAIN_DEPENDENCY ${DOXYFILE_OUT} ${DOXYFILE_IN} ${MCSS_DOXYFILE_OUT} ${MCSS_DOXYFILE_IN}
	COMMENT "Generating themed docs with m.css"
	VERBATIM)

add_custom_target(Doxygen DEPENDS ${DOXYGEN_HTML})
set_target_properties(Doxygen PROPERTIES EXCLUDE_FROM_ALL TRUE)

include(GNUInstallDirs)
install(DIRECTORY ${DOXYGEN_OUTPUT_DIR} DESTINATION ${CMAKE_INSTALL_DOCDIR})
